--- a/WormTrackerV2.ipynb
+++ b/WormTrackerV2.ipynb
@@ -120,6 +120,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tensorflow as tf \n",
+        "from tensorflow import keras\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 4,
       "metadata": {},
       "outputs": [],
