added some comments

--- a/WormTrackerV2.ipynb
+++ b/WormTrackerV2.ipynb
@@ -21,6 +21,22 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#THIS FILE WAS USED IN COLAB TO RUN CERTAIN THINGS WITH A gpu\n",
+        "#No core code is in here anymore\n",
+        "#-John"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "QTsNmevRXlp9"
       },
